--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">= 16"
   },
   "scripts": {
+    "start": "npm run dev",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
@@ -54,6 +55,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
+    "postcss-px-to-viewport": "https://github.com/TAUnionOtto/postcss-px-to-viewport",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.7.4",
